@@ -62,6 +62,7 @@ nodes to be placed outside of buildings defined in the scenario.</li>
   <li> The Hash() method has been added to the QueueDiscItem class to compute the
     hash of various fields of the packet header (depending on the packet type).</li>
   <li> Added a priority queue disc (PrioQueueDisc).</li>
+  <li> Added a new trace source in StaWifiMac for tracing beacon arrivals</li>
 </ul>
 <h2>Changes to existing API:</h2>
 <ul>
