@@ -318,6 +318,7 @@ private:
 
   TracedCallback<Mac48Address> m_assocLogger;   ///< assoc logger
   TracedCallback<Mac48Address> m_deAssocLogger; ///< deassoc logger
+  TracedCallback<Time>         m_beaconArrival; ///< beacon arrival logger
 };
 
 } //namespace ns3
